--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^19.2.0",
     "@angular/material": "^19.2.19",
     "@angular/platform-browser": "^19.2.0",
@@ -24,6 +25,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.18",
     "express": "^4.18.2",
+    "firebase": "^11.10.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
